@@ -1,17 +1,17 @@
 package com.findex.service;
 
-
 import com.findex.dto.dashboard.IndexPerformanceDto;
 import com.findex.dto.dashboard.IndexPerformanceRawDto;
-import com.findex.entity.IndexInfo;
+import com.findex.dto.dashboard.RankedIndexPerformanceDto;
 import com.findex.enums.PeriodType;
 import com.findex.repository.indexinfo.IndexInfoRepository;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,14 +19,11 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
-public class DashboardService {
-
-  private static final int CALCULATION_SCALE = 4;
+public class IndexRankService {
 
   private final IndexInfoRepository indexInfoRepository;
 
-  public List<IndexPerformanceDto> getFavoriteIndexPerformances(PeriodType periodType) {
-
+  public List<RankedIndexPerformanceDto> getPerformanceRank(PeriodType periodType, int limit) {
     LocalDate currentDate = LocalDate.now();
     LocalDate beforeDate = switch (periodType) {
       case DAILY -> currentDate.minusDays(1);
@@ -34,32 +31,37 @@ public class DashboardService {
       case MONTHLY -> currentDate.minusMonths(1);
     };
 
-    List<IndexPerformanceRawDto> rawDataList = indexInfoRepository.findPerformanceRawData(
+    List<IndexPerformanceRawDto> rawDataList = indexInfoRepository.findAllPerformanceRawData(
         currentDate, beforeDate);
 
-    return rawDataList.stream()
+    List<IndexPerformanceDto> sortedPerformances = rawDataList.stream()
         .map(raw -> {
-          IndexInfo indexInfo = raw.indexInfo();
           BigDecimal currentPrice = Optional.ofNullable(raw.currentPrice()).orElse(BigDecimal.ZERO);
           BigDecimal beforePrice = Optional.ofNullable(raw.beforePrice()).orElse(BigDecimal.ZERO);
-
           BigDecimal versus = currentPrice.subtract(beforePrice);
           BigDecimal fluctuationRate = BigDecimal.ZERO;
           if (beforePrice.compareTo(BigDecimal.ZERO) != 0) {
-            fluctuationRate = versus.divide(beforePrice, CALCULATION_SCALE, RoundingMode.HALF_UP)
+            fluctuationRate = versus.divide(beforePrice, 4, RoundingMode.HALF_UP)
                 .multiply(new BigDecimal("100"));
           }
-
           return new IndexPerformanceDto(
-              indexInfo.getId(),
-              indexInfo.getIndexClassification(),
-              indexInfo.getIndexName(),
+              raw.indexInfo().getId(),
+              raw.indexInfo().getIndexClassification(),
+              raw.indexInfo().getIndexName(),
               currentPrice,
               beforePrice,
               versus,
               fluctuationRate
           );
         })
-        .collect(Collectors.toList());
+        .filter(p -> p.fluctuationRate() != null)
+        .sorted(Comparator.comparing(IndexPerformanceDto::fluctuationRate).reversed())
+        .limit(limit)
+        .toList();
+
+
+    return IntStream.range(0, sortedPerformances.size())
+        .mapToObj(i -> new RankedIndexPerformanceDto(i + 1, sortedPerformances.get(i)))
+        .toList();
   }
 }
